output/ExprParser.java
// $ANTLR null /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g 2019-04-23 02:15:24

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ExprParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFFECT", "AFFECTATT", "ARG", 
		"ARGDEC", "ARRAY", "ATTRIBUT", "ATTRIBUTAFFECT", "BLOCK", "CALL", "CALLCROCHET", 
		"CALLEXP", "CALLFUN", "COND", "DIV", "DO", "EGAL", "ELSE", "ELSEIF", "END", 
		"FINBLOCK", "FOR", "FUNCDEC", "ID", "IF", "IN", "INFIXCOMP", "INFIXMULTDIV", 
		"INTLIT", "ITERATION", "LET", "MLCOMMENT", "MOINS", "MOINS_UNAIRE", "MULT", 
		"OF", "PARAM", "PLUS", "RETURN", "ROOT", "STRINGLIT", "THEN", "TYPEARRAYDEC", 
		"TYPEDEC", "TYPERENAME", "VARARRAYDEC", "VARDEC", "VARRECORD", "VARSIMPLE", 
		"WHILE", "WHITESPACE", "'&'", "'('", "')'", "'+'", "','", "'-'", "'.'", 
		"':'", "':='", "';'", "'='", "'['", "']'", "'array'", "'break'", "'do'", 
		"'else'", "'end'", "'for'", "'function'", "'if'", "'in'", "'let'", "'nil'", 
		"'of'", "'then'", "'to'", "'type'", "'var'", "'while'", "'{'", "'|'", 
		"'}'"
	};
	public static final int EOF=-1;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int AFFECT=4;
	public static final int AFFECTATT=5;
	public static final int ARG=6;
	public static final int ARGDEC=7;
	public static final int ARRAY=8;
	public static final int ATTRIBUT=9;
	public static final int ATTRIBUTAFFECT=10;
	public static final int BLOCK=11;
	public static final int CALL=12;
	public static final int CALLCROCHET=13;
	public static final int CALLEXP=14;
	public static final int CALLFUN=15;
	public static final int COND=16;
	public static final int DIV=17;
	public static final int DO=18;
	public static final int EGAL=19;
	public static final int ELSE=20;
	public static final int ELSEIF=21;
	public static final int END=22;
	public static final int FINBLOCK=23;
	public static final int FOR=24;
	public static final int FUNCDEC=25;
	public static final int ID=26;
	public static final int IF=27;
	public static final int IN=28;
	public static final int INFIXCOMP=29;
	public static final int INFIXMULTDIV=30;
	public static final int INTLIT=31;
	public static final int ITERATION=32;
	public static final int LET=33;
	public static final int MLCOMMENT=34;
	public static final int MOINS=35;
	public static final int MOINS_UNAIRE=36;
	public static final int MULT=37;
	public static final int OF=38;
	public static final int PARAM=39;
	public static final int PLUS=40;
	public static final int RETURN=41;
	public static final int ROOT=42;
	public static final int STRINGLIT=43;
	public static final int THEN=44;
	public static final int TYPEARRAYDEC=45;
	public static final int TYPEDEC=46;
	public static final int TYPERENAME=47;
	public static final int VARARRAYDEC=48;
	public static final int VARDEC=49;
	public static final int VARRECORD=50;
	public static final int VARSIMPLE=51;
	public static final int WHILE=52;
	public static final int WHITESPACE=53;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "recty", "dec", "program", "infixand", "mult", "ifelse", 
		"fieldcreate", "whileexp", "arrty", "arrcreate", "exp", "vardec1", "decbase", 
		"decinfixand", "reccreate", "decinfixor", "fundec", "lvalue", "decadd", 
		"infixor", "add", "base", "tydec", "callcrochet", "decexp", "seqexp", 
		"ty", "ifthenelse", "fielddec", "comp", "callexp", "exp2", "decinfixassign", 
		"letexp", "decmult", "vardec", "infixassign", "deccomp", "assignment", 
		"negation", "forexp"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public ExprParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public ExprParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public ExprParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return ExprParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:14:1: program : exp -> ^( ROOT exp ) ;
	public final ExprParser.program_return program() throws RecognitionException {
		ExprParser.program_return retval = new ExprParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope exp1 =null;

		RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");

		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(14, 0);

		try {
			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:14:11: ( exp -> ^( ROOT exp ) )
			dbg.enterAlt(1);

			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:14:13: exp
			{
			dbg.location(14,13);
			pushFollow(FOLLOW_exp_in_program166);
			exp1=exp();
			state._fsp--;

			stream_exp.add(exp1.getTree());
			// AST REWRITE
			// elements: exp
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 14:17: -> ^( ROOT exp )
			{
				dbg.location(14,19);
				// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:14:19: ^( ROOT exp )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(14,21);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ROOT, "ROOT"), root_1);
				dbg.location(14,26);
				adaptor.addChild(root_1, stream_exp.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(15, 3);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program"


	public static class dec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "dec"
	// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:18:1: dec : ( tydec | vardec | fundec );
	public final ExprParser.dec_return dec() throws RecognitionException {
		ExprParser.dec_return retval = new ExprParser.dec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope tydec2 =null;
		ParserRuleReturnScope vardec3 =null;
		ParserRuleReturnScope fundec4 =null;


		try { dbg.enterRule(getGrammarFileName(), "dec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(18, 0);

		try {
			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:18:7: ( tydec | vardec | fundec )
			int alt1=3;
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			switch ( input.LA(1) ) {
			case 81:
				{
				alt1=1;
				}
				break;
			case 82:
				{
				alt1=2;
				}
				break;
			case 73:
				{
				alt1=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:18:9: tydec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(18,9);
					pushFollow(FOLLOW_tydec_in_dec188);
					tydec2=tydec();
					state._fsp--;

					adaptor.addChild(root_0, tydec2.getTree());

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:19:6: vardec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(19,6);
					pushFollow(FOLLOW_vardec_in_dec195);
					vardec3=vardec();
					state._fsp--;

					adaptor.addChild(root_0, vardec3.getTree());

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:20:6: fundec
					{
					root_0 = (Object)adaptor.nil();


					dbg.location(20,6);
					pushFollow(FOLLOW_fundec_in_dec202);
					fundec4=fundec();
					state._fsp--;

					adaptor.addChild(root_0, fundec4.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(21, 3);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "dec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "dec"


	public static class tydec_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "tydec"
	// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:23:1: tydec : 'type' ID '=' ty -> ^( TYPEDEC ID ty ) ;
	public final ExprParser.tydec_return tydec() throws RecognitionException {
		ExprParser.tydec_return retval = new ExprParser.tydec_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal5=null;
		Token ID6=null;
		Token char_literal7=null;
		ParserRuleReturnScope ty8 =null;

		Object string_literal5_tree=null;
		Object ID6_tree=null;
		Object char_literal7_tree=null;
		RewriteRuleTokenStream stream_81=new RewriteRuleTokenStream(adaptor,"token 81");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
		RewriteRuleSubtreeStream stream_ty=new RewriteRuleSubtreeStream(adaptor,"rule ty");

		try { dbg.enterRule(getGrammarFileName(), "tydec");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(23, 0);

		try {
			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:23:13: ( 'type' ID '=' ty -> ^( TYPEDEC ID ty ) )
			dbg.enterAlt(1);

			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:23:15: 'type' ID '=' ty
			{
			dbg.location(23,15);
			string_literal5=(Token)match(input,81,FOLLOW_81_in_tydec220);  
			stream_81.add(string_literal5);
			dbg.location(23,22);
			ID6=(Token)match(input,ID,FOLLOW_ID_in_tydec222);  
			stream_ID.add(ID6);
			dbg.location(23,25);
			char_literal7=(Token)match(input,64,FOLLOW_64_in_tydec224);  
			stream_64.add(char_literal7);
			dbg.location(23,29);
			pushFollow(FOLLOW_ty_in_tydec226);
			ty8=ty();
			state._fsp--;

			stream_ty.add(ty8.getTree());
			// AST REWRITE
			// elements: ty, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 23:32: -> ^( TYPEDEC ID ty )
			{
				dbg.location(23,34);
				// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:23:34: ^( TYPEDEC ID ty )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(23,36);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPEDEC, "TYPEDEC"), root_1);
				dbg.location(23,44);
				adaptor.addChild(root_1, stream_ID.nextNode());dbg.location(23,48);
				adaptor.addChild(root_1, stream_ty.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(24, 6);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "tydec");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "tydec"


	public static class ty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ty"
	// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:26:1: ty : ( ID -> ^( TYPERENAME ID ) | arrty -> ^( TYPEARRAYDEC arrty ) | recty -> ^( ATTRIBUT recty ) );
	public final ExprParser.ty_return ty() throws RecognitionException {
		ExprParser.ty_return retval = new ExprParser.ty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ID9=null;
		ParserRuleReturnScope arrty10 =null;
		ParserRuleReturnScope recty11 =null;

		Object ID9_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_recty=new RewriteRuleSubtreeStream(adaptor,"rule recty");
		RewriteRuleSubtreeStream stream_arrty=new RewriteRuleSubtreeStream(adaptor,"rule arrty");

		try { dbg.enterRule(getGrammarFileName(), "ty");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(26, 0);

		try {
			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:26:7: ( ID -> ^( TYPERENAME ID ) | arrty -> ^( TYPEARRAYDEC arrty ) | recty -> ^( ATTRIBUT recty ) )
			int alt2=3;
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			switch ( input.LA(1) ) {
			case ID:
				{
				alt2=1;
				}
				break;
			case 67:
				{
				alt2=2;
				}
				break;
			case 84:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:26:9: ID
					{
					dbg.location(26,9);
					ID9=(Token)match(input,ID,FOLLOW_ID_in_ty254);  
					stream_ID.add(ID9);

					// AST REWRITE
					// elements: ID
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 26:12: -> ^( TYPERENAME ID )
					{
						dbg.location(26,15);
						// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:26:15: ^( TYPERENAME ID )
						{
						Object root_1 = (Object)adaptor.nil();
						dbg.location(26,17);
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPERENAME, "TYPERENAME"), root_1);
						dbg.location(26,28);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:27:6: arrty
					{
					dbg.location(27,6);
					pushFollow(FOLLOW_arrty_in_ty269);
					arrty10=arrty();
					state._fsp--;

					stream_arrty.add(arrty10.getTree());
					// AST REWRITE
					// elements: arrty
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 27:12: -> ^( TYPEARRAYDEC arrty )
					{
						dbg.location(27,15);
						// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:27:15: ^( TYPEARRAYDEC arrty )
						{
						Object root_1 = (Object)adaptor.nil();
						dbg.location(27,17);
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPEARRAYDEC, "TYPEARRAYDEC"), root_1);
						dbg.location(27,30);
						adaptor.addChild(root_1, stream_arrty.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:28:6: recty
					{
					dbg.location(28,6);
					pushFollow(FOLLOW_recty_in_ty284);
					recty11=recty();
					state._fsp--;

					stream_recty.add(recty11.getTree());
					// AST REWRITE
					// elements: recty
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 28:12: -> ^( ATTRIBUT recty )
					{
						dbg.location(28,15);
						// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:28:15: ^( ATTRIBUT recty )
						{
						Object root_1 = (Object)adaptor.nil();
						dbg.location(28,17);
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ATTRIBUT, "ATTRIBUT"), root_1);
						dbg.location(28,26);
						adaptor.addChild(root_1, stream_recty.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(29, 3);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ty");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "ty"


	public static class arrty_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "arrty"
	// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:31:1: arrty : 'array' 'of' ID -> ID ;
	public final ExprParser.arrty_return arrty() throws RecognitionException {
		ExprParser.arrty_return retval = new ExprParser.arrty_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal12=null;
		Token string_literal13=null;
		Token ID14=null;

		Object string_literal12_tree=null;
		Object string_literal13_tree=null;
		Object ID14_tree=null;
		RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
		RewriteRuleTokenStream stream_78=new RewriteRuleTokenStream(adaptor,"token 78");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

		try { dbg.enterRule(getGrammarFileName(), "arrty");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(31, 0);

		try {
			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:31:9: ( 'array' 'of' ID -> ID )
			dbg.enterAlt(1);

			// /home/ali/Desktop/2ndyear/ProjetCompil/labbaize1u/Expr.g:31:11: 'array' 'of' ID
			{
			dbg.location(31,11);
			string_literal12=(Token)match(input,67,FOLLOW_67_in_arrty306);  
			stream_67.add(string_literal12);
			dbg.location(31,19);
			string_literal13=(Token)match(input,78,FOLLOW_78_in_arrty308);  
			stream_78.add(string_literal13);
			dbg.location(31,24);
			ID14=(Token)match(input,ID,FOLLOW_ID_in_arrty310);  
			stream_ID.add(ID14);

			// AST REWRITE
			// elements: ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 31:28: -> ID
			{
				dbg.location(31,31);
				adaptor.addChild(root_0, stream_ID.nextNode());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);
